Fixed dialog layout bug.

--- a/static/public/css/dialog-signup.1.0.css
+++ b/static/public/css/dialog-signup.1.0.css
@@ -11,11 +11,12 @@
     width:220px;
     margin: 16px;
     text-align:center;
+    font-size: 12px;
 }
 
 #signing-up {
     margin-left:8px;margin-right:6px;
-    display:inline-block;
+    display:inline-block; 
 }
 
 #signing-up-time {
