--- a/static/public/css/jquery-ui-repunch.css
+++ b/static/public/css/jquery-ui-repunch.css
@@ -3,7 +3,6 @@
     border-bottom: 1px solid #CCCCCC;
     height: 25px;
 	font: bold 18px/25px 'Cabin', sans-serif;
-    padding: 0 15px;
     
     background-image: -ms-linear-gradient(bottom, #F1F1F1 0%, #FFFFFF 100%);
     background-image: -moz-linear-gradient(bottom, #F1F1F1 0%, #FFFFFF 100%);
